# AvaVA_ML

./: .gitignore  README.md  assistant.py  assistantml.py  checkvoices.py  listen.py  main.py  pyproject.toml  requirements.txt  test.py
.awsconfig/: config  credentials
.github/workflows/: python-package-conda.yml  python-publish.yml
commands/: assistantvoice.py  fuck.py  settimer.py  timer.py
src/: voice.txt
src/commands/: assistantvoice.py  devassistantvoice.py  joke.py
