[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]

[project]
name = "SamanthaVA_ML"
version = "0.1.5"
authors = [
    {name = "SpectraTheFox", email = "spectrathefox@gmail.com"},
]
description = "The Samantha Voice Assistant"
readme = "README.md"
requires-python = ">=3.8"
requires = [
    "requests",
    "google",
    "playsound",
    "pyttsx3",
    "textblob"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
